--- a/IA1-GigaPanda/projet/code/views/partials/header.hbs
+++ b/IA1-GigaPanda/projet/code/views/partials/header.hbs
@@ -1,1 +1,14 @@
 <!--place header here-->
+<header id="wrapper">
+</header>
+
+
+<style>
+    body {
+  background-color: dodgerblue;
+  margin: 0;
+}
+
+/* Constrains the width and centers the page's content. */
+
+</style>
