--- a/IA1-GigaPanda/projet/code/views/airport/welcome.hbs
+++ b/IA1-GigaPanda/projet/code/views/airport/welcome.hbs
@@ -1,74 +1,5 @@
 <!--h1>{{title}}</h1-->
 
-<style>
-			@import url('https://fonts.googleapis.com/css?family=Corben:700');
-
-			body {
-				margin: 0;
-				padding: 0;
-			}
-
-			h1 {
-			  font-family: 'Corben', cursive;
-			  font-size: 6rem;
-			  color: white;
-			  letter-spacing: 0.1rem;
-			  text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.66);
-			}
-
-			.hero {
-			  background-image: radial-gradient(50% 176%, #253854 80%, #061922 100%);
-			  min-height: 50rem;
-			  position: relative;
-			  overflow: hidden;
-			  display: flex;
-			  justify-content: center;
-			  align-content: center;
-			  
-			  &__content {
-			    position: relative;
-			    align-self: center;
-			    padding: 3rem 0;
-			  }
-			}
-
-			.snow {
-			  position: absolute;
-			  min-width: 100vw;
-			  min-height: 100vh;
-			  height: 100%;
-			  width: 100%;
-			  top: 0;
-			  left: 0;
-			}
-
-			.snow .svg {
-			  position: absolute;
-			  width: 100%;
-			  height: 100%;
-			}
-
-			#snow-top-layer {
-			  will-change: transform;
-			  transform: translateY(-768px);
-			  animation: fall 22.5s infinite linear;
-			}
-
-			#snow-bottom-layer {
-			  will-change: transform;
-			  transform: translateY(-768px);
-			  animation: fall 45s infinite linear;
-			}
-
-			@keyframes fall {
-			  
-			  100% {
-			    transform: translateY(0);
-			  }
-			  
-			}
-		</style>
-
 <div class="hero">
 
 		    <div class="snow">
@@ -145,11 +76,13 @@
 		    	</svg>
 		    </div>
 
-			<div class="hero__content">
-				<h1>{{title}}</h1>
-				<a href="/user/signin">Sign in first ! 🐼</a>
-			</div>
+			<div class="hero__content" style="position:relative; z-index:1;">
+				<h1 class="welcome_title">{{title}}</h1>
+				<button onclick="window.location.href='/user/signin';" class="signin_btn">
 
-		</div>
+				Sign in first ! 🐼
+				</button>
+			</div>
+</div>
 
 <!--a href="/user/signin">Sign in first ! 🐼</a-->
