--- a/IA-AVENGERS/project/code/Template/index.html
+++ b/IA-AVENGERS/project/code/Template/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div id="login" class="mt-3 align-middle text-center">
-			<input type="email" class="ml-auto mr-auto form-control col-3" id="emailLogin" placeholder="exemple@domaine.xyz">
+			<input type="email" class="ml-auto mr-auto form-control col-3" id="emailLogin" placeholder="exemple@domaine.xyz" required>
 			<br>
 			<button type="button" class=" btn btn-primary" id="loginButton">Se connecter</button>
 		</div>
