added README + design button sign out

--- a/IA1-GigaPanda/projet/code/views/airport/index.hbs
+++ b/IA1-GigaPanda/projet/code/views/airport/index.hbs
@@ -5,7 +5,7 @@
         <p>Connected as: {{firstname}} {{lastname}}</p>
         <button onclick="window.location.href='/user/mytickets/{{firstname}}/{{lastname}}';">
                     My tickets 🐼
-            </button>
+        </button>
     </div>
     <div class="table-container">
     <table class="content-table">
@@ -85,8 +85,8 @@
     </div>
 
     
-    <div>
-            <a href="/">Sign out</a>
-    </div>
+    <button onclick="window.location.href='/';">
+                    Sign out
+    </button>
 
 </div>
