--- a/si3-DDistrib/projet/client/public/css/site.css
+++ b/si3-DDistrib/projet/client/public/css/site.css
@@ -1,42 +1,113 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
 
 .gauche {
-    width: 65%;
+    width: 60%;
     height: 100%;
     float: left;
-    background-color: bisque;
+    background-color: #eee;
+    border-radius: 20px;
+    margin: 20px;
+    padding: 10px;
+    min-width: 510px;
 }
 .droite {
     width: 25%;
     height: 100%;
     float: right;
-    background-color: aqua;
+    background-color: #eee;
+    margin: 20px;
+    border-radius: 20px;
+    padding: 10px;
+    min-width: 255px;
 }
 
 .recherche {
     width: 100%;
-    margin: 0 auto;
+    margin: 50px 0px;
+}
+
+.recherche form {
+    display: flex;
+    flex-direction: row;
+    margin: 15px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+.recherche form .from {
+    flex: 1;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.recherche form label {
+    font-size: 20px;
+    text-transform: uppercase;
+    float: left;
+}
+
+.recherche form .to {
+    flex: 1;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.recherche form input {
+    flex: 1;
+}
+
+.f1 {
+    flex: 1;
+}
+
+.f2 {
+    flex: 2;
+}
+
+.f3 {
+    flex: 3;
+}
+
+.button {
+    border: none;
+    padding: 10px;
+    background-color: midnightblue;
+    color: #fff;
+    border-radius: 20px;
 }
 
 .billet {
-    width: 100%;
+    width: calc(100% - 40px);
+    height: 75px;
     float: left;
     padding: 10px;
     margin: 0 auto;
-    background-color: darksalmon;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .textArea {
-    background-color: aquamarine;
-    float: left;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 .price {
-    background-color: cornflowerblue;
-    text-align: center;
+    text-align: left;
+    align-items: center;
+    justify-content: center;
 }
 
 .addButton {
-    background-color: darkorange;
-    float: right;
+    
 }
 
 .billetClientTopPrice {
@@ -44,13 +115,32 @@
 }
 
 .billetClient {
-    background-color: red;
-    border-color: black;
     padding: 10px;
+    text-align: center;
+    align-items: center;
+    background-color: midnightblue;
+    color: #fff;
+    margin: 10px;
+    border-radius: 20px;
 }
 
 .billetClient2 {
     background-color: green;
     border-color: black;
     padding: 10px;
+}
+
+h1 {
+    font-family: sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: lighter;
+    padding: 10px;
+    margin: 20px 0px;
+}
+
+select {
+    border: none;
+    background: none;
+    font-size: 15px;
 }
