--- a/SI-HexClan/projet/frontend/src/components/Login/template.pug
+++ b/SI-HexClan/projet/frontend/src/components/Login/template.pug
@@ -11,9 +11,9 @@
                     b-button(type="submit" variant="success").buttons.rounded-pill Submit
                     b-button(type="reset" variant="secondary").buttons.rounded-pill Reset
 
-        b-modal(ref="modal_user_not_found" centered title="Warning")
-            p(class="my-4") User not found, please register
-        b-modal(ref="modal_success" centered title="Success login")
-            p(class="my-4") Redirection in progress
-        b-modal(ref="modal_error" centered title="Error")
-            p(class="my-4") Unkown error happened
+        //- b-modal(ref="modal_user_not_found" centered title="Warning")
+        //-     p(class="my-4") User not found, please register
+        //- b-modal(ref="modal_success" centered title="Success login")
+        //-     p(class="my-4") Redirection in progress
+        //- b-modal(ref="modal_error" centered title="Error")
+        //-     p(class="my-4") Unkown error happened
