--- a/SI-HelloWorld/projet/code/templates/flight_list.ejs
+++ b/SI-HelloWorld/projet/code/templates/flight_list.ejs
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Liste des vols disponibles</title>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -11,6 +14,7 @@
 <body>
     <%- include('navbar.ejs') %>
         <div id="main">
+            <div id="datepicker" type="date" onchange="changeDate()"></div>
             <h1>Liste des vols disponibles</h1>
             <% for (var i = 0; i < flights.length; i++) { %>
                 <div class="card mb-3">
@@ -18,25 +22,36 @@
                     <div id="flight-card" class="card-body">
                         <h5 class="card-title">
                             ✈
-                            <%= flights[i].code_airport_dep %> (
-                                <%= flights[i].dep_time %>) →
-                                    <%= flights[i].code_airport_dest %> (
-                                        <%= flights[i].arrival_time %>)
+                            <%= flights[i].code_airport_dep %>
+                                <% if(flights[i].dep_time) { %>(
+                                    <%= flights[i].dep_time %>)
+                                        <% } %> →
+                                            <%= flights[i].code_airport_dest %>
+                                                <% if(flights[i].dep_time) { %>(
+                                                    <%= flights[i].arrival_time %>)
+                                                        <% } %>
                         </h5>
                         <p class="card-text"><b>Compagnie :</b>
-                            <%= flights[i].company %>
+                            <%- flights[i].company ? flights[i].company : "<i>Non connue.</i>" %>
+                        </p>
+                        <p class="card-text"><b>Avion :</b>
+                            <%- flights[i].plane.name %> (total de
+                                <%- flights[i].plane.total_seats %> places)
                         </p>
                         <p class="card-text"><b>Prix : </b>
-                            <%= flights[i].price %>€
+                            <%= flights[i].base_price %>€
                         </p>
-                        <p class="card-text"><i>Encore
+                        <% if(flights[i].nb_seats) { %>
+                            <p class="card-text"><i>Encore
                     <%= flights[i].nb_seats %> places disponibles !</i>
-                        </p>
-                        <a href="<%= '/flights/' + flights[i].id %>" class="btn btn-primary">Plus de détails</a>
+                            </p>
+                            <% } %>
+                                <a href="<%= '/flights/' + flights[i].id + '/' + date %>" class="btn btn-primary">Plus de détails</a>
                     </div>
                 </div>
                 <%}%>
         </div>
+        <script src="../js/flights_manager.js"></script>
 </body>
 
 </html>
